Fix padding issue on iPhone 7

--- a/css/components/_table.scss
+++ b/css/components/_table.scss
@@ -12,7 +12,7 @@
 
     tbody {
       display: block;
-      max-width: calc(100vw - 30px);
+      max-width: calc(100vw - 60px);
       overflow-x: auto;
     }
 
